# kooplearn

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTIBUTING.md  LICENSE  README.md  RegressionTest.ipynb  _arnoldi.c  _gemini_report.md  _kernels.c  _kernels.pyx  code_review_brunton.md  code_review_dpnet.md  cython_tests.ipynb  dash_server.py  debug_pickle.py  edmd_tests.ipynb  fix_contrib.sh  justfile  keops_tests.ipynb  kernels.py  pyproject.toml  pytest.ini  release.sh  roadmap.md  setup.py  test.ipynb  tests.ipynb  todo.md  workspace.code-workspace
.dev_exps/pde_integration/: kme_utils.py
.github/workflows/: CI.yml  draft-pdf.yml  pages.yml  release.yml  tests.yml
.ipynb_checkpoints/: cython_tests-checkpoint.ipynb
DynamicalSystems/: __init__.py  dmd.py  implementation_notes.md  kernels.py  koopman_regression.py  notes.md  operator_regression.py  reduced_rank_regression.py  sklearn_estimators.py  sklearn_utils.py  utils.py
KernelDMD/: __init__.py  dmd.py  kernels.py  vladi_ker.py
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
benchmarks/: .gitignore  fit_time.py  readme.md
deep kooplearn/: main.py  test.ipynb
dev_docs/: code_review_brunton.md  code_review_dpnets.md  dev_tutorials.md  roadmap.md  todo.md
docs/: Makefile  _config.yml  api.rst  bibliography.bib  conf.py  datasets.rst  examples.rst  getting_started.ipynb  index.rst  model_zoo.md  primer.md  requirements.txt
docs/JOSS/: codemeta.json  paper.bib  paper.md
docs/_autosummary/: kooplearn.datasets.deterministic.rst  kooplearn.datasets.heteroscedastic.rst  kooplearn.datasets.misc.rst  kooplearn.datasets.rst  kooplearn.datasets.stochastic.rst  kooplearn.kernel.linalg.rst  kooplearn.kernel.rst  kooplearn.kernel.structs.rst  kooplearn.kernel.utils.rst  kooplearn.linear_model.rst  kooplearn.rst  kooplearn.torch.rst  kooplearn.utils.rst
docs/_build/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_source/: conf.py  getting_starded.rst  getting_started.rst  index.rst  kooplearn.rst  modules.rst
docs/_static/: custom_rules.css
docs/_templates/: class.rst  function.rst  module.rst
docs/api/: datasets.rst  index.rst  jax.rst  kernel.rst  linear.rst  linear_model.rst  main.rst  metrics.rst  preprocessing.rst  torch.rst
docs/api_reference/: abc.rst  data.rst  dmd_models.rst  edmd.rst  feature_maps.rst  index.rst  models.rst  nn.rst  nn_functional.rst
docs/examples/: ala2.ipynb  ala2_nys_tutorial.ipynb  ala2_nys_tutorial.md  coherence.ipynb  context_windows.ipynb  index.rst  kernel_methods.ipynb  kernel_methods.md  linear_model.ipynb  linear_system.ipynb  linear_system.md  logistic_map.ipynb  nys-rrr-ala2-tutorial.ipynb  ordered_mnist.md  prinz_potential.md  switching_system.ipynb  switching_system.md
docs/guides/: data_specs.md  extending_kooplearn.md  index.rst
examples/: ala2_nys_tutorial.ipynb  dpnet.ipynb  flow_modes.ipynb  fluid_flow_dmd.ipynb  index.rst  kernel_methods.ipynb  kooplearn_datasets.ipynb  linear_system.ipynb  logistic_map.ipynb  nys-rrr-ala2-tutorial.ipynb  ordered_mnist.ipynb  ordered_mnist_jax.ipynb  ordered_mnist_script_torch.py  ordered_mnist_torch.ipynb  prinz_potential.ipynb  prinz_potential_dirichlet_generator.ipynb  switching_system.ipynb
examples/Beijing_air_quality/: analysis.ipynb  dataset_parsing.ipynb  features_names  get_dataset.py  standardizing_parameters
examples/MNIST_prediction/: MNIST_kernel_learning.ipynb  MNIST_prediction.ipynb  _img_data.npy  (+3 more)
kerneldmd/: _kernel_helpers.c  _kernel_helpers.pyx  eig_tools.py  kernels.py
kerneldmd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kooplearn/: __about__.py  __init__.py  _keops_utils.py  abc.py  data.py  estimators.py  example_with_nn.py  kernels.py  main.py  requirements.txt  sklearn_estimators.py  sklearn_utils.py  utils.py
legacy_code/: koopman_regression.py  utils.py
source/: conf.py  index.rst
tests/: _legacy_test_koopman_estimators.py  _test_brunton.py  _test_dpnet.py  _test_visualizer.py  dev_nystroem.ipynb  test_QR_decomposition.py  test_better_contexts.ipynb  test_brunton.py  test_check_estimators.py  test_context_window_utils.py  test_data_utils.py  test_dict_of_fns_estimators.py  test_dpnet.py  test_duffing.py  test_edmd_estimators.py  test_estimator_scale_invariance.py  test_evd.ipynb  test_feature_map_embedder.py  test_jax_losses.py  test_kernel_estimators.py  test_kernel_generator_estimator.py  test_kernel_nystroem_estimator.py  test_kernel_ridge_estimator.py  test_kernels.py  test_koopman_estimators.py  test_linear_system_dataset.py  test_logistic_map.py  test_lorenz63.py  test_low_level_primal_dual_consistency.py  test_nnx_feature_map_embedder.py  test_noisy_logistic_map.py  test_ordered_mnist.py  test_primal_dual_consistency.py  test_prinz_potential.py  test_regime_switching.py  test_ridge_estimator.py  test_serialization.py  test_sklearn_compatibility.py  test_spectral_decomposition.py  test_torch_losses.py  (+1 more)
(+296 files in other folders)
