[project]
name = "kooplearn"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giacomo Turri", email = "turri.giacomo@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]
